tests/snapshots/examples_advanced/grade_analyzer.snap
---
source: tests/examples_advanced_snapshots.rs
---
Fixture: examples/advanced/grade_analyzer.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `letter_grade`.

  examples/advanced/grade_analyzer.flx:38:30
   |
13 | fn letter_grade(avg) {
14 |     if avg >= 90.0 { return GradeA }
15 |     if avg >= 80.0 { return GradeB }
16 |     if avg >= 70.0 { return GradeC }
17 |     if avg >= 60.0 { return GradeD }
18 |     GradeF
19 | }
20 | 
21 | fn grade_label(grade) {
22 |     match grade {
23 |         GradeA -> "A",
24 |         GradeB -> "B",
25 |         GradeC -> "C",
26 |         GradeD -> "D",
27 |         GradeF -> "F",
28 |         _ -> "?",
29 |     }
30 | }
31 | 
32 | fn summarize(student) {
33 |     let scores = match student["scores"] {
34 |         Some(v) -> v,
35 |         _ -> [||],
36 |     }
37 |     let avg = average(scores)
38 |     let grade = letter_grade(avg)
   |                              ^^^
   |                              --- this argument has type `Int`

Note:
  expected argument type: Float
  found argument type: Int
  the actual argument type is inferred from this expression
  the expected argument type comes from the function signature

Help:
  Try `to_float(...)` to widen this `Int` to a `Float`.


error[E300]: Type Mismatch

I found a type mismatch.

  examples/advanced/grade_analyzer.flx:39:18
   |
39 |     let passed = avg >= 60.0
   |                  ^^^^^^^^^^^
   |                  ----------- this expression has type `Float`

   |                  ----------- this type mismatch is reported here

Note:
  expected type: Int
  found type: Float
  the conflicting types meet at this expression

Help:
  Try `to_int(...)` if truncating a `Float` to an `Int` is intended.

Found 2 errors.
== stdout ==
<not executed>
