tests/snapshots/examples_advanced/using_modules.snap
---
source: tests/examples_advanced_snapshots.rs
---
Fixture: examples/advanced/using_modules.flx
== compile ==
failed (compile)
== diagnostics ==
Warning: Flux IR lowering fallback

unsupported infix operator

  examples/advanced/using_modules.flx:35:36
   |
35 |     let evens = filter(nums, /x -> x % 2 == 0)
   |                                    ^^^^^
== stdout ==
<not executed>
